tests/golden/type_errors/generic_struct_impl.cd
struct Box<T> { value: T }

impl Box {
  fun get(): number {
    return 0;
  }
}
