tests/golden/type_errors/generic_struct_impl.err
Type error at 3:6: impl for generic struct `Box` is not supported
  impl Box {
       ^
